hello-world/hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: seedimage
          image: mluukkai/hello:1

---

apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
